--- a/resume.tex
+++ b/resume.tex
@@ -135,54 +135,19 @@
 
 %--------PROFILE------------
 \section{\faUser \hspace{0.2cm} \Large Profile}
-Passionate about learning and creating things, both in the fields of art and technology. Currently, focusing on topics concerning usability and front-end development of web and mobile applications, but following the steps to become a full-stack developer.
+Passionate about learning and creating things, both in the fields of Art and Technology. Currently, focusing on topics concerning usability and front-end development of web and mobile applications, but following the steps to become a full-stack professional.
 
 \vspace{0.1cm} % Space between sections
-
-%-----------EDUCATION-----------------
-\section{\faGraduationCap \hspace{0.2cm} \Large Education}
-
-    \resumeSubHeadingListStart
-        \resumeSubheading
-        {Bachelor of Computer Science}{\faCalendar \hspace{0.1cm} 2017 - 2021}
-        {Federal University of Ceará}{\faMapMarker \hspace{0.1cm} Crateús, CE}
-        \begin{itemize}
-            \item \textbf{Scholarships}
-                \begin{itemize}
-                    \resumeScholarship
-                    {Program for Beginning Teachers:}{\faCalendar \hspace{0.1cm} \small Feb 2019 - Dec 2019}
-                    {Academic mentoring for IT and engineering students (C and Python).}{}
-            
-                    \resumeScholarship
-                    {Program of Academic Initiation:}{\faCalendar \hspace{0.1cm} \small Apr 2018 - Dec 2018}
-                    {Practical studies of 3D modeling and Virtual Reality using Blender.}{}
-        
-                    % \resumeScholarship
-                    % {Program of Academic Initiation:}{\faCalendar \hspace{0.1cm} \small Jun 2017 - Dec 2017}
-                    % {Development of educational platform using AngularJS and Semantic UI.}{}
-                \end{itemize}
-        \end{itemize}
-        
-        \vspace{-0.2cm}
-      
-        \begin{itemize}
-            \item \textbf{Volunteer}
-                \begin{itemize}
-                    \item \textbf{GEMP/CRT:} Study group for the SBC Programming Marathon. \href{https://github.com/GEMP-UFC-Crateus}{\scriptsize \faExternalLink}
-                \end{itemize}
-                \vspace{0.05cm}
-        \end{itemize}
-    \resumeSubHeadingListEnd
 
 %-----------EXPERIENCE-----------------
 \section{\faBriefcase \hspace{0.2cm} \Large Experience}
 
     \resumeSubHeadingListStart
         \resumeSubheading
-        {Front-end Developer}{\faCalendar \hspace{0.1cm} Apr 2021 - Currently}
+        {Software Developer}{\faCalendar \hspace{0.1cm} Apr 2021 - Currently}
         {OSF Digital}{\faMapMarker \hspace{0.1cm} Quixadá, CE - Remote}
         \begin{itemize}
-            \item Development of enterprise CRM systems and Proofs Of Concept.
+            \item Development of enterprise CRM systems and Proofs of Concept.
         \end{itemize}
     \resumeSubHeadingListEnd
     
@@ -191,7 +156,7 @@ Passionate about learning and creating things, both in the fields of art and tec
     \resumeSubHeadingListStart
         \resumeSubheading
         {Software Developer Intern}{\faCalendar \hspace{0.1cm} Feb 2021 - Apr 2021}
-        {Instituto Pró-Hemoce}{\faMapMarker \hspace{0.1cm} Fortaleza, CE - Remote}
+        {Pró-Hemoce Institute}{\faMapMarker \hspace{0.1cm} Fortaleza, CE - Remote}
         
         \begin{itemize}
             \item Development of new features for RHeuni, a Human Resources management platform.
@@ -208,17 +173,48 @@ Passionate about learning and creating things, both in the fields of art and tec
     \resumeSubHeadingListStart
         \resumeSubheading
         {Software Developer Intern}{\faCalendar \hspace{0.1cm} Jan 2020 - Dec 2020}
-        {Fundação ASTEF}{\faMapMarker \hspace{0.1cm} Crateús, CE - Remote}
+        {ASTEF Foundation}{\faMapMarker \hspace{0.1cm} Crateús, CE - Remote}
         
         \begin{itemize}
-            \item Development of web and mobile applications to optimize the patient admission process at Instituto Pró-Hemoce. Some features include user management, notifications, image gallery, chatbot, and generation of reports. Despite the affinity for learning front-end subjects, there was also a contact with concepts and tools related to UI/UX Design, back-end and DevOps, as well as some agile methodologies principles.
+            \item Development of web and mobile applications to optimize the patient admission process at Pró-Hemoce Institute. Some features include user management, notifications, image gallery, chatbot, and generation of reports. Despite the affinity for learning front-end subjects, there was also a contact with concepts and tools related to UI/UX Design, back-end and DevOps, as well as some agile methodologies principles.
             \begin{itemize}
                 \item \textbf{Mobile:} Android, Java, Retrofit, Realm.
-                \item \textbf{Web:} ReactJS, TypeScript, Material-UI, Redux.
-                \item \textbf{Server:} Spring Framework, Hibernate, MySQL, FlyWay, JWT, Keycloak, MinIO, MQTT.
+                \item \textbf{Front-end:} ReactJS, TypeScript, Material UI, Redux.
+                \item \textbf{Back-end:} Spring Framework, Hibernate, MySQL, FlyWay, JWT, Keycloak, MinIO, MQTT.
                 \item \textbf{DevOps:} Docker, Git, GitLab.
             \end{itemize}
             \vspace{0.01cm} % Space between sections
+        \end{itemize}
+    \resumeSubHeadingListEnd
+
+%-----------EDUCATION-----------------
+\section{\faGraduationCap \hspace{0.2cm} \Large Education}
+
+    \resumeSubHeadingListStart
+        \resumeSubheading
+        {Bachelor of Computer Science}{\faCalendar \hspace{0.1cm} 2017 - 2021}
+        {Federal University of Ceará (UFC)}{\faMapMarker \hspace{0.1cm} Crateús, CE}
+        \begin{itemize}
+            \item \textbf{Scholarships}
+                \begin{itemize}
+                    \resumeScholarship
+                    {Program for Beginning Teachers:}{}
+                    {Academic mentoring for IT and engineering students (C and Python).}{}
+            
+                    \resumeScholarship
+                    {Program of Academic Initiation:}{}
+                    {Practical studies of 3D modeling and Virtual Reality using Blender.}{}
+                \end{itemize}
+        \end{itemize}
+        
+        \vspace{-0.2cm}
+      
+        \begin{itemize}
+            \item \textbf{Volunteer}
+                \begin{itemize}
+                    \item \textbf{GEMP/CRT:} Study group for the SBC Programming Marathon. \href{https://github.com/GEMP-UFC-Crateus}{\scriptsize \faExternalLink}
+                \end{itemize}
+                \vspace{0.05cm}
         \end{itemize}
     \resumeSubHeadingListEnd
 
@@ -226,9 +222,9 @@ Passionate about learning and creating things, both in the fields of art and tec
 \section{\faGlobe \hspace{0.2cm} \Large Languages}
 
 \begin{tabular}{c c c c}
-    \textbf{Portuguese:} Native & \hspace{2.15cm}
-    \textbf{English:} Advanced & \hspace{2.15cm}
-    \textbf{Spanish:} Basic & \hspace{2.15cm}
+    \textbf{Portuguese:} Native & \hspace{1.6cm}
+    \textbf{English:} Upper Intermediate & \hspace{1.6cm}
+    \textbf{Spanish:} Basic & \hspace{1.6cm}
     \textbf{French:} Basic
 \end{tabular}
 
@@ -237,17 +233,18 @@ Passionate about learning and creating things, both in the fields of art and tec
 %--------SKILLS------------
 \section{\faPuzzlePiece \hspace{0.2cm} \Large Skills}
 
-    Main knowledge acquired while working as a software developer, besides other topics from a study guide. \href{https://github.com/DanielBrito/self-learning}{\scriptsize \faExternalLink}
+    Main knowledge acquired while working as a developer, besides other topics from a personal study guide. \href{https://github.com/DanielBrito/self-learning}{\scriptsize \faExternalLink}
     
     \resumeSubHeadingListStart
         \resumeSubItem {Programming Languages:}{JavaScript, Dart, Java, C++, Python, Processing, C.}
-        \resumeSubItem {Front-end:}{HTML, CSS, ReactJS, Material-UI, Styled Components, TypeScript, Bootstrap.}
-        \resumeSubItem {Graphic Design:}{Figma, Photoshop, Inkscape, Blender.}
+        \resumeSubItem {Front-end:}{HTML, CSS, ReactJS, Material UI, Styled Components, TypeScript, Bootstrap.}
+        \resumeSubItem {Design:}{UI/UX, Figma, Photoshop, Inkscape, Blender.}
         \resumeSubItem {Mobile:}{Flutter, Android, Retrofit, Realm.}
         \resumeSubItem {Back-end:}{AWS, Firebase, Node.js, PostgreSQL, JWT, Express, Sequelize, Spring Framework, MySQL.}
-        \resumeSubItem {DevOps:}{Git, GitHub, Azure, Docker, GitLab.}
-        \resumeSubItem {Tools:}{Insomnia, DBeaver.}
-        \resumeSubItem {Soft Skills:}{Teamwork, communication, organization, creativity, critical thinking.}
+        \resumeSubItem {DevOps:}{GitHub, Azure, Docker, GitLab.}
+        \resumeSubItem {Operating Systems:}{Linux, Windows.}
+        \resumeSubItem {Tools:}{Git, Insomnia, DBeaver, Microsoft Office.}
+        \resumeSubItem {Soft Skills:}{Communication, teamwork, organization, creativity, critical thinking.}
         
         \vspace{0.3cm} % Space between section
     \resumeSubHeadingListEnd
@@ -261,8 +258,6 @@ Passionate about learning and creating things, both in the fields of art and tec
                 \item \textbf{HáLugar:} Housing app for students. Developed for Android platform using Java, and other tools such as Google Maps, Nominatim API, Glide, PhotoView, Compressor, and Firebase (Auth, Realtime Database, Storage). \href{https://play.google.com/store/apps/details?id=br.ufc.crateus.halugar}{\scriptsize \faExternalLink}
                 \item \textbf{Dissertation:} Procedural modeling with Blender and Python. \href{https://github.com/DanielBrito/monografia}{\scriptsize \faExternalLink}
                 \item \textbf{Compixelar:} Development of multimedia experiments using p5.js and Processing. \href{https://medium.com/@danielhbrito}{\scriptsize \faExternalLink}
-                \item \textbf{RESTack:} Experimental REST API built with Node.js, Express, Sequelize, PostgreSQL and JWT. \href{https://github.com/DanielBrito/restack-api}{\scriptsize \faExternalLink}
-                \item \textbf{Home:} Refactored version of personal website using ReactJS and Material-UI. \href{https://danielbrito.github.io/home/}{\scriptsize \faExternalLink}
             \end{itemize}
             
         \resumeSubItem{Education}{}
@@ -271,9 +266,10 @@ Passionate about learning and creating things, both in the fields of art and tec
                 \item \textbf{YouTube Channel:}  Programming tutorials for beginners. \href{https://www.youtube.com/channel/UC4y3uq1d7MKDYs1LbI44Vng}{\scriptsize \faExternalLink}
             \end{itemize}
             
-        \resumeSubItem{Visual Arts}{}
+        \resumeSubItem{Arts}{}
             \begin{itemize}
                 \item \textbf{Aluminions:} Creation of characters using aluminum seals. \href{https://www.instagram.com/aluminions.13/}{\scriptsize \faExternalLink}
+                \item \textbf{Fanzines:} Electronic publication of poems. \href{https://issuu.com/daniel.brito/}{\scriptsize \faExternalLink}
                 
                 \vspace{0.1cm} % Space between sections
             \end{itemize}
@@ -285,12 +281,7 @@ Passionate about learning and creating things, both in the fields of art and tec
     \resumeSubHeadingListStart
         \resumeWorkshops
             {Fire Tasks - An awesome task manager:}{\faMapMarker \hspace{0.1cm} Federal University of Ceará}
-            {Application built with ReactJS, Styled Components and Firestore. \href{https://github.com/DanielBrito/fire-tasks}{\scriptsize \faExternalLink}}{\faCalendar \hspace{0.1cm} Mar 2021}
-        
-        % \resumeWorkshops
-        %     {Introduction to Digital Art with Blender:}{\faMapMarker \hspace{0.1cm} Federal University of Ceará}
-        %     {Presentation of basic resources like creating and animating digital objects.}{\faCalendar \hspace{0.1cm} Feb 2020}
-        
+            {Application built with ReactJS, Styled Components and Firestore. \href{https://github.com/DanielBrito/fire-tasks}{\scriptsize \faExternalLink}}{}
         \vspace{0.15cm} % Space between sections
     \resumeSubHeadingListEnd
     
@@ -300,11 +291,11 @@ Passionate about learning and creating things, both in the fields of art and tec
     \resumeSubHeadingListStart
         \resumeCertifications
             {Responsive Web Design:}{{\small \faInstitution} \hspace{0.01cm} freeCodeCamp}
-            {Basics of HTML and CSS. Best practices for accessibility. Responsive design principles. \href{https://www.freecodecamp.org/certification/danielbrito/responsive-web-design}{\scriptsize \faExternalLink}}{\faClockO \hspace{0.1cm} 300 h}
+            {Basics of HTML and CSS. Best practices for accessibility. Responsive design principles. \href{https://www.freecodecamp.org/certification/danielbrito/responsive-web-design}{\scriptsize \faExternalLink}}{}
             
         \resumeCertifications
             {JavaScript Algorithms and Data Structures:}{{\small \faInstitution} \hspace{0.01cm} freeCodeCamp}
-            {Fundamentals of JavaScript. Object-Oriented Programming and Functional Programming. \href{https://www.freecodecamp.org/certification/danielbrito/javascript-algorithms-and-data-structures}{\scriptsize \faExternalLink}}{\faClockO \hspace{0.1cm} 300 h}
+            {Fundamentals of JavaScript. Object-Oriented and Functional Programming. \href{https://www.freecodecamp.org/certification/danielbrito/javascript-algorithms-and-data-structures}{\scriptsize \faExternalLink}}{}
             
             \vspace{0.1cm} % Space between sections
     \resumeSubHeadingListEnd
@@ -312,31 +303,21 @@ Passionate about learning and creating things, both in the fields of art and tec
 %-----------AWARDS-----------------
 \section{\faTrophy \hspace{0.2cm} \Large Awards}
     \resumeSubHeadingListStart
+        \resumeSubItem{Champion:}
+        {Hackathon HackPI Ceará, promoted by the Federal University of Ceará and the State Education Department along with the University of São Paulo.}
+        
+        \vspace{0.2cm}
+        
         \resumeSubItem{First Place:}
-        {Hackathon FIT-ON, promoted during the Fórum de Inovação e Tecnologia at the Federal University of Ceará - Crateús Campus.}
+        {Hackathon FIT-ON, promoted during the Innovation and Technology Forum at the Federal University of Ceará.}
         
         \vspace{0.2cm}
         
         \resumeSubItem{Best Work:}
-        {Project ``Practical studies of 3D modeling and Virtual Reality using Blender'' during Encontros Universitários at the Federal University of Ceará - Crateús Campus.}
+        {Project ``Practical studies of 3D modeling and Virtual Reality using Blender'' during University Meetings at the Federal University of Ceará.}
         
         \vspace{0.3cm}
     \resumeSubHeadingListEnd
-
-%-----------PUBLICATIONS (Already on my website)-----------------
-% \section{\faBook \hspace{0.2cm} \Large Publications}
-%     \resumeSubHeadingListStart
-%         \resumeSubItem{Books}{}
-%             \begin{itemize}
-%                 \item \textbf{A Ler Vazios:} Poetic and visual experiments. \hfill \faCalendar \hspace{0.1cm} 2016
-%                 \item \textbf{Protestizando:} Compilation of first poems. \hfill \faCalendar \hspace{0.1cm} 2015
-%             \end{itemize}
-%         \resumeSubItem{Anthologies}{}
-%             \begin{itemize}
-%                 \item \textbf{180 Gramas:} Organized by Sarau do Vinil. \hfill \faCalendar \hspace{0.1cm} 2016
-%                 \item \textbf{Poesia na Faixa:} Organized by Poetas do Tietê. \hfill \faCalendar \hspace{0.1cm} 2015
-%             \end{itemize}
-%     \resumeSubHeadingListEnd
 
 %-----------OTHER INTERESTS-----------------
 \section{\faThumbsUp \hspace{0.2cm} \Large Other Interests}
