--- a/resume.tex
+++ b/resume.tex
@@ -1,3 +1,6 @@
+% References:
+% Icons: http://mirrors.ibiblio.org/CTAN/fonts/fontawesome/doc/fontawesome.pdf
+
 %-------------------------
 % Resume in Latex
 % Author : Sourabh Bajaj
@@ -114,28 +117,29 @@
 \begin{document}
 
 %----------HEADING-----------------
+
 \textbf{\huge Daniel Brito} \\ 
-\textbf{Software Developer • Visual Artist • Writer} \\
-  
-\vspace{0.2cm} % Space between sections
+\vspace{0.1cm} % Space between sections
+\textbf{Software Developer • Computer Scientist • Visual Artist • Writer} \\
+\vspace{0.3cm} % Space between sections
 
 %----------Location and contacts-----------------
 \begin{tabular}{c c c c c}
     \faMapMarker{\hspace{0.1cm} Ceará, Brazil} & \hspace{0.45cm}
-    \faGithub{\hspace{0.2cm}\href{https://danielbrito.github.io}{danielbrito.github.io}} & \hspace{0.45cm}
+    \faGlobe{\hspace{0.2cm}\href{https://danielbrito.github.io}{danielbrito.github.io}} & \hspace{0.45cm}
     \faEnvelope{\hspace{0.2cm}\href{mailto:danielhbrito@outlook.com}{danielhbrito@outlook.com}} & \hspace{0.45cm}
     \faLinkedin{\hspace{0.2cm}\href{https://www.linkedin.com/in/daniel-brito}{daniel-brito}} & \hspace{0.45cm}
     \faPaperPlane{\hspace{0.2cm}\href{https://t.me/danielhbrito}{danielhbrito}}
 \end{tabular}
 
-\vspace{0.3cm} % Space between sections
+\vspace{0.5cm} % Space between sections
 
 % Justifying all the content:
 \justify
 
 %--------PROFILE------------
 \section{\faUser \hspace{0.2cm} \Large Profile}
-Passionate about learning and creating things, both in the fields of Art and Technology. Currently, focusing on topics concerning usability and front-end development of web and mobile applications, but following the steps to become a full-stack professional.
+Passionate about learning, creating things, and sharing knowledge, both in the fields of Art and Technology. Currently, focusing on topics concerning usability and front-end development of web and mobile applications, but following the steps of a full-stack professional.
 
 \vspace{0.1cm} % Space between sections
 
@@ -147,28 +151,39 @@ Passionate about learning and creating things, both in the fields of Art and Tec
         {Software Developer}{\faCalendar \hspace{0.1cm} Apr 2021 - Currently}
         {OSF Digital}{\faMapMarker \hspace{0.1cm} Quixadá, CE - Remote}
         \begin{itemize}
-            \item Development of enterprise CRM systems and Proofs of Concept.
+            \item Development of enterprise CRM systems.
+            \item Member of the Diversity and Inclusion Committee.
         \end{itemize}
     \resumeSubHeadingListEnd
     
-    \vspace{-0.3cm}
+    \vspace{-0.2cm}
 
+    % \resumeSubHeadingListStart
+    %     \resumeSubheading
+    %     {Software Developer Intern}{\faCalendar \hspace{0.1cm} Feb 2021 - Apr 2021}
+    %     {Pró-Hemoce Institute}{\faMapMarker \hspace{0.1cm} Fortaleza, CE - Remote}
+        
+    %     \begin{itemize}
+    %         \item Development of new features for RHeuni, a Human Resources management platform.
+    %         \begin{itemize}
+    %             \item \textbf{Back-end:} Node.js, Express, Sequelize, PostgreSQL, JWT.
+    %             \item \textbf{DevOps:} Git, GitLab.
+    %             \item \textbf{Tools:} Draw.io, Figma, DBeaver, Insomnia.
+    %         \end{itemize}
+    %     \end{itemize}
+    % \resumeSubHeadingListEnd
+    
     \resumeSubHeadingListStart
         \resumeSubheading
-        {Software Developer Intern}{\faCalendar \hspace{0.1cm} Feb 2021 - Apr 2021}
-        {Pró-Hemoce Institute}{\faMapMarker \hspace{0.1cm} Fortaleza, CE - Remote}
+        {Research Assistant Intern}{\faCalendar \hspace{0.1cm} Feb 2021 - Currently}
+        {Laboratory of Studies and Research in Social Economics (LEPES/USP)}{\faMapMarker \hspace{0.1cm} Ribeirão Preto, SP - Remote}
         
         \begin{itemize}
-            \item Development of new features for RHeuni, a Human Resources management platform.
-            \begin{itemize}
-                \item \textbf{Back-end:} Node.js, Express, Sequelize, PostgreSQL, JWT.
-                \item \textbf{DevOps:} Git, GitLab.
-                \item \textbf{Tools:} Draw.io, Figma, DBeaver, Insomnia.
-            \end{itemize}
+            \item Development of a web platform addressing the issue ``enhancing the use and interpretation of data'' proposed during the HackPI - Hackathon for the First Childhood.
         \end{itemize}
     \resumeSubHeadingListEnd
     
-    \vspace{-0.3cm}
+    \vspace{-0.2cm}
 
     \resumeSubHeadingListStart
         \resumeSubheading
@@ -219,12 +234,12 @@ Passionate about learning and creating things, both in the fields of Art and Tec
     \resumeSubHeadingListEnd
 
 %--------LANGUAGES------------
-\section{\faGlobe \hspace{0.2cm} \Large Languages}
+\section{\faComments \hspace{0.2cm} \Large Languages}
 
 \begin{tabular}{c c c c}
-    \textbf{Portuguese:} Native & \hspace{1.6cm}
-    \textbf{English:} Upper Intermediate & \hspace{1.6cm}
-    \textbf{Spanish:} Basic & \hspace{1.6cm}
+    \textbf{Portuguese:} Native & \hspace{2cm}
+    \textbf{English:} C1 Advanced & \hspace{2cm}
+    \textbf{Spanish:} Basic & \hspace{2cm}
     \textbf{French:} Basic
 \end{tabular}
 
@@ -236,14 +251,14 @@ Passionate about learning and creating things, both in the fields of Art and Tec
     Main knowledge acquired while working as a developer, besides other topics from a personal study guide. \href{https://github.com/DanielBrito/self-learning}{\scriptsize \faExternalLink}
     
     \resumeSubHeadingListStart
-        \resumeSubItem {Programming Languages:}{JavaScript, Dart, Java, C++, Python, Processing, C.}
+        \resumeSubItem {Programming Languages:}{JavaScript, Kotlin, Dart, Java, C++, Python, Processing, C.}
         \resumeSubItem {Front-end:}{HTML, CSS, ReactJS, Material UI, Styled Components, TypeScript, Bootstrap.}
-        \resumeSubItem {Design:}{UI/UX, Figma, Photoshop, Inkscape, Blender.}
+        \resumeSubItem {Design:}{UI/UX, Figma, Adobe XD, Photoshop, Inkscape, Blender.}
         \resumeSubItem {Mobile:}{Flutter, Android, Retrofit, Realm.}
-        \resumeSubItem {Back-end:}{AWS, Firebase, Node.js, PostgreSQL, JWT, Express, Sequelize, Spring Framework, MySQL.}
+        \resumeSubItem {Back-end:}{Spring Framework, AWS, Firebase, Node.js, PostgreSQL, JWT, Express, Sequelize, MySQL.}
         \resumeSubItem {DevOps:}{GitHub, Azure, Docker, GitLab.}
         \resumeSubItem {Operating Systems:}{Linux, Windows.}
-        \resumeSubItem {Tools:}{Git, Insomnia, DBeaver, Microsoft Office.}
+        \resumeSubItem {Tools:}{Git, IntelliJ IDEA, Visual Studio Code, DBeaver, Postman, Insomnia, Microsoft Office.}
         \resumeSubItem {Soft Skills:}{Communication, teamwork, organization, creativity, critical thinking.}
         
         \vspace{0.3cm} % Space between section
@@ -255,14 +270,14 @@ Passionate about learning and creating things, both in the fields of Art and Tec
     \resumeSubHeadingListStart
         \resumeSubItem{Technology}{}
             \begin{itemize}
-                \item \textbf{HáLugar:} Housing app for students. Developed for Android platform using Java, and other tools such as Google Maps, Nominatim API, Glide, PhotoView, Compressor, and Firebase (Auth, Realtime Database, Storage). \href{https://play.google.com/store/apps/details?id=br.ufc.crateus.halugar}{\scriptsize \faExternalLink}
+                \item \textbf{HáLugar:} Housing app for students. Developed for Android platform using Java and other tools such as Google Maps, Nominatim API, Glide, PhotoView, Compressor, and Firebase (Auth, Realtime Database, Storage). \href{https://play.google.com/store/apps/details?id=br.ufc.crateus.halugar}{\scriptsize \faExternalLink}
                 \item \textbf{Dissertation:} Procedural modeling with Blender and Python. \href{https://github.com/DanielBrito/monografia}{\scriptsize \faExternalLink}
                 \item \textbf{Compixelar:} Development of multimedia experiments using p5.js and Processing. \href{https://medium.com/@danielhbrito}{\scriptsize \faExternalLink}
             \end{itemize}
             
         \resumeSubItem{Education}{}
             \begin{itemize}
-                \item \textbf{sTuring:} Scientific divulgation. \href{https://www.instagram.com/sturing.compsci/}{\scriptsize \faExternalLink}
+                \item \textbf{sTuring:} Scientific divulgation on topics related to Computing. \href{https://www.instagram.com/sturing.compsci/}{\scriptsize \faExternalLink}
                 \item \textbf{YouTube Channel:}  Programming tutorials for beginners. \href{https://www.youtube.com/channel/UC4y3uq1d7MKDYs1LbI44Vng}{\scriptsize \faExternalLink}
             \end{itemize}
             
@@ -280,7 +295,7 @@ Passionate about learning and creating things, both in the fields of Art and Tec
 
     \resumeSubHeadingListStart
         \resumeWorkshops
-            {Fire Tasks - An awesome task manager:}{\faMapMarker \hspace{0.1cm} Federal University of Ceará}
+            {Fire Tasks - A nice task manager:}{\faMapMarker \hspace{0.1cm} Federal University of Ceará}
             {Application built with ReactJS, Styled Components and Firestore. \href{https://github.com/DanielBrito/fire-tasks}{\scriptsize \faExternalLink}}{}
         \vspace{0.15cm} % Space between sections
     \resumeSubHeadingListEnd
@@ -322,7 +337,7 @@ Passionate about learning and creating things, both in the fields of Art and Tec
 %-----------OTHER INTERESTS-----------------
 \section{\faThumbsUp \hspace{0.2cm} \Large Other Interests}
 
-    Generative design, chess, astronomy, philosophy, literature, mathematics, history, poetry, sports, music, cinema, social activism, travelling, blogging.
+    Generative design, chess, astronomy, philosophy, literature, mathematics, history, poetry, sports, music, cinema, social activism, travelling, researching, blogging.
   
 %-------------------------------------------
 \end{document}
